--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/laurilautervikk/landmarks#readme",
   "dependencies": {
+    "appjs": "^0.0.20",
     "axios": "^0.24.0",
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.14"
   }
 }
