--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,9 @@
   "homepage": "https://github.com/laurilautervikk/landmarks#readme",
   "dependencies": {
     "appjs": "^0.0.20",
-    "axios": "^0.24.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "request": "^2.88.2"
   }
 }
