--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/laurilautervikk/landmarks#readme",
   "dependencies": {
     "appjs": "^0.0.20",
+    "appjs-win32": "0.0.19",
     "axios": "^0.24.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
