--- a/server/package.json
+++ b/server/package.json
@@ -18,13 +18,9 @@
   },
   "homepage": "https://github.com/laurilautervikk/landmarks#readme",
   "dependencies": {
-    "appjs": "^0.0.20",
-    "appjs-win32": "0.0.19",
-    "axios": "^0.24.0",
-    "cors": "^2.8.5",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.14",
-    "request": "^2.88.2"
+    "mongoose": "^6.0.13",
+    "nodemon": "^2.0.14"
   }
 }
