--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "express-jwt": "^6.1.0",
     "mdbvue": "^6.7.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
