--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/laurilautervikk/landmarks#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
     "nodemon": "^2.0.14"
   }
