--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "mdbvue": "^6.7.3",
+    "nodemon": "^2.0.15",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.2"
