--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "mdbvue": "^6.7.3",
     "vue": "^3.0.0",
+    "vue-jwt-decode": "^0.1.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.2"
   },
