story/MEEL-4 Debounce working

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "lodash.debounce": "^4.0.8",
     "mdbvue": "^6.7.3",
     "vue": "^3.0.0",
+    "vue-debounce": "^3.0.1",
     "vue-jwt-decode": "^0.1.0",
     "vue-router": "^4.0.0-0",
     "vue-template-compiler": "^2.6.14",
