--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "lodash.debounce": "^4.0.8",
     "mdbvue": "^6.7.3",
+    "mongoose-paginate-v2": "^1.4.2",
     "nodemon": "^2.0.15",
     "vue": "^3.0.0",
     "vue-jwt-decode": "^0.1.0",
