--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "lodash.debounce": "^4.0.8",
     "mdbvue": "^6.7.3",
+    "moment": "^2.29.1",
     "mongoose-paginate-v2": "^1.4.2",
     "nodemon": "^2.0.15",
     "vue": "^3.0.0",
