--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^6.0.13",
     "mongoose-paginate-v2": "^1.4.2",
     "nodemon": "^2.0.14",
+    "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.3.0"
   }
 }
