--- a/server/package.json
+++ b/server/package.json
@@ -28,5 +28,8 @@
     "nodemon": "^2.0.14",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.3.0"
+  },
+  "devDependencies": {
+    "@types/swagger-jsdoc": "^6.0.1"
   }
 }
