--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,8 @@
     "mongoose-paginate-v2": "^1.4.2",
     "nodemon": "^2.0.14",
     "swagger-jsdoc": "^6.1.0",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/swagger-jsdoc": "^6.0.1"
