--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "env2": "^2.2.2",
     "express": "^4.17.1",
     "lodash.debounce": "^4.0.8",
     "mdbvue": "^6.7.3",
